# fmt-research

./: .gitignore  CMakeLists.txt  README.md
include/: README.md
snippet/: CMakeLists.txt
snippet/MyFmtTest/: CMakeLists.txt  main.cpp
snippet/TemporaryTest/: main.cpp
snippet/ToStrTest/: CMakeLists.txt  main.cpp
src/: LFormatarg.h  lformatarg.h  main.cpp
